Theme/ElegantFin-theme-nightly.css
/* ... */
.checkboxOutline:not(.multiSelectCheckboxOutline) {
    border: solid gray var(--borderWidth);
    background-color: white;
    transition: all 0.125s;
}

.emby-checkbox:checked + span + .checkboxOutline:not(.multiSelectCheckboxOutline) {
    box-shadow: none;
    background: var(--checkboxCheckedBgColor);
    border: var(--defaultLighterBorder);
}

.emby-checkbox:focus:not(:checked) + span + .checkboxOutline {
    border-color: var(--highlightOutlineColor) !important;
    outline: none;
}

.emby-checkbox:focus + span + .checkboxOutline {
    border-color: var(--highlightOutlineColor) !important;
    outline: none;
}

@supports (display: revert) {
    .emby-checkbox:focus:not(:checked) + span + .checkboxOutline {
        outline: var(--borderWidth) solid gray;
        outline-offset: calc(-2.5 * var(--borderWidth));
    }

    .emby-checkbox:focus + span + .checkboxOutline {
        border-color: white !important;
        outline: var(--borderWidth) solid var(--highlightOutlineColor);
    }
}

.cardIndicators {
    -webkit-align-items: center;
    align-items: center;
    top: 0.5em;
}

[dir="ltr"] .cardIndicators {
    right: 0.5em;
}

.layout-mobile .cardIndicators {
    top: 0.45em;
    right: 0.5em;
}

.indicator {
    border: solid rgb(124 124 124 / 50%) var(--borderWidth);
    border-radius: 100em;
}

.playedIndicator {
    background: rgb(34, 197, 94);
    border: var(--defaultLighterBorder);
}

.videoIndicator {
    background: rgb(41 41 41);
    padding: 0.5em;
    transform: scale(0.85);
    border: var(--defaultLighterBorder);
    font-size: 0.75em;
}

.videoIndicator:has(.photo_album),
.videoIndicator:has(.folder) {
    background: peru;
}

.videoIndicator:has(.photo) {
    background: steelblue;
}

.videoIndicator:has(.videocam) {
    background: indianred;
}

.defaultCardBackground,
.cardScalable {
    background: var(--cardBackgroundGradient);
}

div[data-type="Book"] .play_arrow:before {
    content: "\f1c6";
    font-size: 85%;
}

div[data-type="Photo"] .play_arrow:before {
    content: "\e5d0";
}

div[data-type="PhotoAlbum"] .play_arrow:before {
    content: "\e8eb";
}

.emby-button.block,
.button-alt,
.raised,
#btnDeleteImage,
.manageRecordingButton,
.dashboardActionsContainer > .emby-button {
    color: #fff;
    border-radius: var(--smallRadius);
    background: var(--lighterGradientPoint);
    border: var(--defaultBorder);
    transition: all 0.125s;
}

.editItemMetadataForm > .metadataFormFields div:has(.formDialogFooterItem) {
    display: flex;
    justify-content: center;
}

.btnBrowse > .folder {
    margin-inline-end: 0.5em;
}

.fab {
    color: #fff;
    background: var(--lighterGradientPoint);
    border: var(--defaultBorder);
}

.fab:focus {
    background: var(--lighterGradientPoint) !important;
    filter: brightness(1.2);
}

.raised:focus {
    background: inherit;
    filter: brightness(1.2);
}

.raised:active,
.fab:active,
.emby-button:active {
    filter: brightness(1.2) !important;
    transform: scale(0.98);
}

.detailButton {
    border: var(--defaultLighterBorder);
    padding: 0.5em 0.5em !important;
}

.detailButton-icon {
    font-variation-settings:
        "FILL" 0,
        "wght" 400,
        "GRAD" 0,
        "opsz" 48;
}

.cardScalable .material-icons.check:before {
    font-variation-settings:
        "FILL" 1,
        "wght" 700,
        "GRAD" 0,
        "opsz" 20;
    transform: scale(1.25);
}

.emby-button[title="Favorite"] .material-icons.favorite:before {
    font-variation-settings:
        "FILL" 1,
        "wght" 400,
        "GRAD" 0,
        "opsz" 20;
}

.detailButton:not(.btnPlay) {
    color: var(--textColor);
    backdrop-filter: none;
    border-color: transparent;
    margin: 0.5em !important;
    border-radius: 50%;
    padding: 0.6em !important;
    background: transparent;
}

.layout-desktop .detailButton:not(.btnPlay):hover {
    color: black;
    background: var(--dimTextColor);
}

.detailButton:active {
    color: black;
    background: var(--textColor);
}

.btnPlay.detailButton {
    background-color: var(--textColor);
    color: black;
    border-radius: 3em;
    border-color: var(--borderColor);
    height: 3em;
    min-width: 10em;
    margin-right: 0.5em !important;
    flex-direction: row;
}

.btnPlay:not(.formDialogFooterItem):not(.play-button):after {
    content: attr(title);
    padding-right: 1ch;
}

.btnPlay > .detailButton-content::after {
    padding: 0 1ch;
    place-content: center;
}

.btnPlay > .detailButton-content {
    -webkit-align-items: unset;
    align-items: unset;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: unset;
    flex-direction: unset;
    -webkit-justify-content: unset;
    align-content: unset;
    justify-content: flex-start;
}

.mainDetailButtons:has(.detailButton[data-type="Book"]) .btnPlay[title="Play"]:after {
    content: "Read";
}

.mainDetailButtons:has(.detailButton[data-type="Book"]) .btnPlay .material-icons.play_arrow:before {
    content: "\f1c6";
    padding-inline-end: 1ch;
}

.mainDetailButtons {
    justify-content: center;
    margin: 0;
}

.layout-mobile [dir="ltr"] .mainDetailButtons {
    flex-wrap: wrap;
    padding: 0 1.25em;
}

@media (min-width: 100em) {
    .mainDetailButtons {
        font-size: unset;
        margin: 0;
    }
}

.localnav > .emby-button {
    background: var(--lighterGradientPoint) !important;
    color: #fff;
    padding: 0.8em 0.8em;
}

div[data-role="controlgroup"] a.ui-btn-active {
    background: var(--selectorBackgroundColor) !important;
    color: #fff !important;
}

.guide-date-tab-button.emby-tab-button-active,
.guide-date-tab-button:focus {
    color: white;
}

#btnDeleteImage,
.button-delete,
.btnRevoke,
#btnShutdown {
    background: var(--btnDeleteColor);
    border: solid var(--btnDeleteBorderColor) var(--borderWidth);
}

.button-submit {
    background: var(--btnSubmitColor) !important;
    border: solid var(--btnSubmitBorderColor) var(--borderWidth) !important;
}
/* ... */

